SFD-5019 Implement login functionality (#25)
* Configure cognito and updateed make and jenkins files

* Updated dev.mk file

* Updated tf files and added lambda

* Updated jenkins deployment file

* Updated ses tf files

* Updated jenkins stages

* Added dependency-check in pom

* Added contract tests folder structure

* Updated jenkins deployment file

* Comment email functionality in cognito pool

* Updated ses region to ireland

* Updated ses region to london

* Updated ses region

* Few Configurations & Increased test coverage to 80%

* Added login functionality and unit tests

* Updated pom.xml with sonar

* Added Login API and tests

* Configured database for local development

* Configure nonprod env variables for deployment

* Temporarily using old email address in cognito to test the app

* Updated TF_VAR_base_service_prefix value to avoid conflict

* Added few make more commands

* Added missing make targets and replace sfa with saa

* Removed COGNITO_USER_POOL from kustomization.yml

* Added new make target monitor-r53-connection

* Updated ses region to ireland

* Removed unnecessary files

* Perform API Tests  removed

* Disabled sonar hook action

* Added few more unit Tests

* Terraform ses updated to ireland

* Disabled sonar cloud action

* Updated tf files to work ses in ireland region

* Fixed deployment error

* Fixed deployment error

* Clean the infra

* Clean the infra

* Clean the infra

* Updated profile dev to nonprod for consistency

* Updated secret manager names in cognito.sh

* Added ingress k8s yaml

* Rename cognito admin pass name

* Fixed few dependancy issues

* Updated service finder auth endpoint url

* Updated log format

* Made few chages to makefile

* Added .vscode in gitignore

* Enable sonar check

* Increased test coverage

* Disable sonar checks